Agregando más opciones de filtrados

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -10,7 +10,19 @@
         <nav>
             <img src="../../img/pokedex_logo.png" alt="Pokedex Logo">
             <ul>
-                <li><button>All</button></li>
+                <li><button>Number</button></li>
+                <li><button>A-Z</button></li>
+                <li><button>Z-A</button></li>
+                <li><button>Height</button></li>
+                <li><button>Weight</button></li>
+                <li><button>Attack</button></li>
+                <li><button>Defense</button></li>
+                <li><button>HP</button></li>
+                <li><button>S. Attack</button></li>
+                <li><button>S. Defense</button></li>
+                <li><button>Speed</button></li>
+            </ul>
+            <ul>
                 <li><button>Bug</button></li>
                 <li><button>Dark</button></li>
                 <li><button>Dragon</button></li>
