Sumando fuente y primeras modificaciones al CSS

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pokeApi</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../style/home.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -22,6 +26,7 @@
                 <li><button>S. Defense</button></li>
                 <li><button>Speed</button></li>
             </ul>
+            
             <ul>
                 <li><button>Bug</button></li>
                 <li><button>Dark</button></li>
@@ -43,6 +48,11 @@
             </ul>
         </nav>
     </header>
-    
+
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. At repudiandae iste itaque nostrum, quod fugit quo
+        provident. Quam corporis ipsam doloremque voluptatem eum illo iste voluptate? Unde consequatur expedita nulla.
+    </h1>
+
 </body>
+
 </html>
